# agentic-ai-intro

./: .gitignore  README.md  package-lock.json  package.json  slides.md
.github/workflows/: deploy.yml
practice/: .gitignore  AGENTS.md  README.md
practice/.opencode/: opencode.jsonc
practice/.opencode/agents/: review.md  teacher.md
practice/.opencode/commands/: checkpoint.md  declarative.md  do-tasks.md  explain.md  grill-me.md  learn.md  to-plan.md  to-tasks.md  what-went-wrong.md
practice/ai/: arxiv-md-implementation-plan.md
practice/ai/arxiv-md-implementation-tasks/: 01-project-scaffolding.md  02-data-models-and-configuration.md  03-arxiv-search-module.md  04-display-module.md  05-interactive-selection-loop.md  06-latex-source-downloader.md  06-storage-and-frontmatter-module.md  07-markdown-converter.md  08-pipeline-integration.md  09-error-handling-and-polish.md
practice/arxiv-md/v1-base/: README.md  opencode-session.md  pyproject.toml
practice/arxiv-md/v2-deduplication-and-docs/: README.md  opencode-session.md
practice/arxiv-md/v3-find-pdf-download-architecture/: .gitignore  README.md  architecture.md  opencode-session.md  pyproject.toml
practice/arxiv-md/v3-find-pdf-download-architecture/arxiv_md/: cli.py  download.py  filter.py  interactive.py  storage.py
practice/challenges/: paint-houses.md  parentheses.md  python-dependency-upgrade-skill.md  roman-integer.md  unique-paths.md
practice/projects/: arxiv-markdown-download.md
practice/sessions/: arxiv-download-planning-session.md  arxiv-paper-skill.md
(+40 files in other folders)
