[project]
name = "arxiv-md"
version = "0.1.0"
description = "arXiv-to-Markdown CLI tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "pylatexenc>=2.10",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
arxiv-md = "arxiv_md.cli:main"

[dependency-groups]
dev = [
    "poethepoet>=0.45.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "."
includes = ["arxiv_md"]

[tool.uv]
package = true

[tool.ruff]
lint.ignore = ["B008", "B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "I", "W"]

[tool.poe.tasks]

format = "ruff format . --check"
format-fix = "ruff format ."

lint = "ruff check ."
lint-fix = "ruff check . --fix"

ty = "ty check ."

check.sequence = ["format", "lint", "ty"]
check.ignore_fail = "return_non_zero"
